Added a placeholder background image. Created header (unfinished).

--- a/about-page.html
+++ b/about-page.html
@@ -4,17 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Restaurant Passport</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="css/index.css"> 
 </head>
-<body class="bg">
-    <div class="container">
-        <header>
-            <nav>
-                <a href="#">About Us</a>
-            </nav>
-            <h1>Restaurant Passport</h1>
-        </header>
-    </div>
+<body>
+    <header>
+        <h1>About Us</h1>
+    </header>
 </body>
 </html>
