Added content/styling to the front landing page. Starting trying to add a font

--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
 <body class="bg">
     <div class="container">
         <header>
-            <nav>
-                <a href="#">About Us</a>
-            </nav>
+          
             <h1>Restaurant Passport</h1>
         </header>
     </div>
+    <div class="buttons-container">
+        <div class="button-holder">
+            <button>Login</button> 
+        </div>
+        <div class="button-holder">
+            <button>Sign Up</button>
+        </div>
+    </div>
+    <nav>
+        <a href="about-page.html">About Us</a>
+    </nav>
 </body>
 </html>
