Finished adding new font. Started about page.

--- a/about-page.html
+++ b/about-page.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Us</title>
     <link rel="stylesheet" href="css/index.css"> 
+    <link rel="stylesheet" href="passport-font-files/stylesheet.css" type="text/css"/>
 </head>
-<body>
-    <header>
-        <h1>About Us</h1>
-    </header>
+<body class='bg'>
+    <div class='container'>
+        <header>
+            <h1>About Us</h1>
+        </header>
+    </div>
 </body>
 </html>
