--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Restaurant Passport</title>
     <link rel="stylesheet" href="css/index.css"> 
+    <link rel="stylesheet" href="passport-font-files/stylesheet.css" type="text/css"  />
 </head>
 <body class="bg">
     <div class="container">
         <header>
-          
             <h1>Restaurant Passport</h1>
         </header>
     </div>
