--- a/about-page.html
+++ b/about-page.html
@@ -9,10 +9,83 @@
     <link rel="stylesheet" href="passport-font-files/stylesheet.css" type="text/css"/>
 </head>
 <body class='bg'>
+    <nav>
+        <a href="index.html">Home</a>
+    </nav>
+<div class='about-container'>
+    
     <div class='container'>
         <header>
-            <h1>About Us</h1>
+            <h1 class='about-h1'>About Us</h1>
         </header>
     </div>
+    <section class='about-content'>
+        <hr>
+        <div class='person 1'>
+            <div class='about-text'>
+                <h2>Sean Birmingham: Web React I</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+            </div>
+            <div class='img-container'>
+                <img src='images/default-person.jpg'/>
+            </div>
+        </div>
+        <hr>
+        <div class='person 2'>
+            <div class='img-container'>
+                <img src='images/default-person.jpg'/>
+            </div>
+            <div class='about-text'>
+                <h2>Antoinette Jones: Web React I</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+            </div>
+        </div>
+        <hr>
+        <div class='person 3'>
+            <div class='about-text'>
+                <h2>Patrick Repogle: Web React II</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+            </div>
+            <div class='img-container'>
+                <img src='images/default-person.jpg'/>
+            </div>
+        </div>
+        <hr>
+        <div class='person 4'>
+            <div class='img-container'>
+                <img src='images/default-person.jpg'/>
+            </div>
+            <div class='about-text'>
+                <h2>Erik Scow: Web UI Developer</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+            </div>
+        </div>
+        <hr>
+        <div class='person 5'>
+            <div class='about-text'>
+                <h2>Kyle Barnett: Backend Developer</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+            </div>
+            <div class='img-container'>
+                <img src='images/default-person.jpg'/>
+            </div>
+        </div>
+        <hr>
+        <div class='person 6'>
+            <div class='img-container'>
+                <img src='images/default-person.jpg'/>
+            </div>
+            <div class='about-text'>
+                <h2>Nicholas Gebhart: Project Lead</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
+            </div>
+        </div>
+        <hr>
+    </section>
+    
+</div>
+<nav id='end-page-nav'>
+    <a href="index.html">Home</a>
+</nav>
 </body>
 </html>
