Further stylized the about page. Added a background image to the landing page (incomplete)

--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
     <link rel="stylesheet" href="css/index.css"> 
     <link rel="stylesheet" href="passport-font-files/stylesheet.css" type="text/css"  />
 </head>
-<body class="bg">
-    <div class="container">
-        <header>
-            <h1>Restaurant Passport</h1>
-        </header>
-    </div>
-    <div class="buttons-container">
-        <div class="button-holder">
-            <button>Login</button> 
+<body class="bg landing-page-body">
+    <div class="flex-container">
+        <div class="container-landing">
+            <header>
+                <h1>Restaurant Passport</h1>
+            </header>
         </div>
-        <div class="button-holder">
-            <button>Sign Up</button>
+        <div class="buttons-container">
+            <div class="button-holder">
+                <button>Login</button> 
+            </div>
+            <div class="button-holder">
+                <button>Sign Up</button>
+            </div>
         </div>
     </div>
-    <nav>
+    <nav class="landing-nav">
         <a href="about-page.html">About Us</a>
-    </nav>
+    </nav class>
 </body>
 </html>
