--- a/about-page.html
+++ b/about-page.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="passport-font-files/stylesheet.css" type="text/css"/>
 </head>
 <body class='bg'>
-    <nav>
+    <nav class="about-nav">
         <a href="index.html">Home</a>
     </nav>
 <div class='about-container'>
     
-    <div class='container'>
-        <header>
+    <div class='container-about'>
+        <header class="ah">
             <h1 class='about-h1'>About Us</h1>
         </header>
     </div>
@@ -26,14 +26,14 @@
                 <h2>Sean Birmingham: Web React I</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
             </div>
-            <div class='img-container'>
-                <img src='images/default-person.jpg'/>
+            <div class='img-container-a'>
+                <img src='images/sean.PNG'/>
             </div>
         </div>
         <hr>
         <div class='person 2'>
-            <div class='img-container'>
-                <img src='images/default-person.jpg'/>
+            <div class='img-container-b'>
+                <img src='images/antoinette.PNG'/>
             </div>
             <div class='about-text'>
                 <h2>Antoinette Jones: Web React I</h2>
@@ -46,14 +46,14 @@
                 <h2>Patrick Repogle: Web React II</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
             </div>
-            <div class='img-container'>
-                <img src='images/default-person.jpg'/>
+            <div class='img-container-a'>
+                <img src='images/patrick.PNG'/>
             </div>
         </div>
         <hr>
         <div class='person 4'>
-            <div class='img-container'>
-                <img src='images/default-person.jpg'/>
+            <div class='img-container-b'>
+                <img src='images/erik.PNG'/>
             </div>
             <div class='about-text'>
                 <h2>Erik Scow: Web UI Developer</h2>
@@ -66,14 +66,14 @@
                 <h2>Kyle Barnett: Backend Developer</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
             </div>
-            <div class='img-container'>
-                <img src='images/default-person.jpg'/>
+            <div class='img-container-a'>
+                <img src='images/kyle.PNG'/>
             </div>
         </div>
         <hr>
         <div class='person 6'>
-            <div class='img-container'>
-                <img src='images/default-person.jpg'/>
+            <div class='img-container-b'>
+                <img src='images/nicholas.PNG'/>
             </div>
             <div class='about-text'>
                 <h2>Nicholas Gebhart: Project Lead</h2>
@@ -84,7 +84,7 @@
     </section>
     
 </div>
-<nav id='end-page-nav'>
+<nav class="about-nav" id='end-page-nav'>
     <a href="index.html">Home</a>
 </nav>
 </body>
