Finished the nav bar. Added another page featuring the pitch for Restaurant Passport.

--- a/about-page.html
+++ b/about-page.html
@@ -10,7 +10,13 @@
 </head>
 <body class='bg'>
     <nav class="about-nav">
-        <a href="index.html">Home</a>
+        <h3 class="title">Restaurant Passport</h3>
+        <div class="links">
+            <a href="index.html">Home</a>
+            <a href="description-page.html">How It Works</a>
+            <a href="#">Login</a>
+            <a href="#">Sign Up</a>
+        </div>
     </nav>
 <div class='about-container'>
     
@@ -85,7 +91,13 @@
     
 </div>
 <nav class="about-nav" id='end-page-nav'>
-    <a href="index.html">Home</a>
+    <h3 class="title">Restaurant Passport</h3>
+        <div class="links">
+            <a href="index.html">Home</a>
+            <a href="description-page.html">How It Works</a>
+            <a href="#">Login</a>
+            <a href="#">Sign Up</a>
+        </div>
 </nav>
 </body>
 </html>
