--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
         </div>
         <div class="buttons-container">
             <div class="button-holder">
-                <button>Login</button> 
+                <button><a href="#">Login</a></button> 
             </div>
             <div class="button-holder">
-                <button>Sign Up</button>
+                <button><a href="#">Sign Up</a></button>
             </div>
         </div>
     </div>
     <nav class="landing-nav">
-        <a href="about-page.html">About Us</a>
+        <h3 class="title">Restaurant Passport</h3>
+        <div class="links">
+            <a href="about-page.html">About Us</a>
+            <a href="description-page.html">How It Works</a>
+        </div>
     </nav class>
 </body>
 </html>
