Fixed h tag and button tag styling. Added tablet and mobile responsiveness.

--- a/about-page.html
+++ b/about-page.html
@@ -27,7 +27,7 @@
     </div>
     <section class='about-content'>
         <hr>
-        <div class='person 1'>
+        <div class='person odd'>
             <div class='about-text'>
                 <h2>Sean Birmingham: Web React I</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
@@ -37,7 +37,7 @@
             </div>
         </div>
         <hr>
-        <div class='person 2'>
+        <div class='person'>
             <div class='img-container-b'>
                 <img src='images/antoinette.PNG'/>
             </div>
@@ -47,7 +47,7 @@
             </div>
         </div>
         <hr>
-        <div class='person 3'>
+        <div class='person odd'>
             <div class='about-text'>
                 <h2>Patrick Repogle: Web React II</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
@@ -57,7 +57,7 @@
             </div>
         </div>
         <hr>
-        <div class='person 4'>
+        <div class='person'>
             <div class='img-container-b'>
                 <img src='images/erik.PNG'/>
             </div>
@@ -67,7 +67,7 @@
             </div>
         </div>
         <hr>
-        <div class='person 5'>
+        <div class='person odd'>
             <div class='about-text'>
                 <h2>Kyle Barnett: Backend Developer</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</p>
@@ -77,7 +77,7 @@
             </div>
         </div>
         <hr>
-        <div class='person 6'>
+        <div class='person'>
             <div class='img-container-b'>
                 <img src='images/nicholas.PNG'/>
             </div>
