--- a/index.html
+++ b/index.html
@@ -11,17 +11,11 @@
 <body class="bg landing-page-body">
     <div class="flex-container">
         <div class="container-landing">
-            <header>
                 <h1>Restaurant Passport</h1>
-            </header>
         </div>
         <div class="buttons-container">
-            <div class="button-holder">
-                <button><a href="#">Login</a></button> 
-            </div>
-            <div class="button-holder">
-                <button><a href="#">Sign Up</a></button>
-            </div>
+            <a href="#">Login</a>
+            <a href="#">Sign Up</a>
         </div>
     </div>
     <nav class="landing-nav">
