added links to react app

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <h1>Restaurant Passport</h1>
         </div>
         <div class="buttons-container">
-            <a href="#">Login</a>
-            <a href="#">Sign Up</a>
+            <a href="https://fe-restaurant-passport-nazrqtqln.now.sh/login">Login</a>
+            <a href="https://fe-restaurant-passport-nazrqtqln.now.sh/register">Sign Up</a>
         </div>
     </div>
     <nav class="landing-nav">
