--- a/description-page.html
+++ b/description-page.html
@@ -14,8 +14,8 @@
         <div class="links">
             <a href="index.html">Home</a>
             <a href="about-page.html">About Us</a>
-            <a href="#">Login</a>
-            <a href="#">Sign Up</a>
+            <a href="https://fe-restaurant-passport-nazrqtqln.now.sh/login">Login</a>
+            <a href="https://fe-restaurant-passport-nazrqtqln.now.sh/register">Sign Up</a>
         </div>
     </nav>
 <div class='about-container'>
@@ -39,8 +39,8 @@
         <div class="links">
             <a href="index.html">Home</a>
             <a href="about-page.html">About Us</a>
-            <a href="#">Login</a>
-            <a href="#">Sign Up</a>
+            <a href="https://fe-restaurant-passport-nazrqtqln.now.sh/login">Login</a>
+            <a href="https://fe-restaurant-passport-nazrqtqln.now.sh/register">Sign Up</a>
         </div>
 </nav>
 </body>
