--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <link rel="stylesheet" href="passport-font-files/stylesheet.css" type="text/css"  />
 </head>
 <body class="bg landing-page-body">
+    
+    <ul class="cb-slideshow">
+        <li>
+            <span>Image 01</span>
+        </li>
+        <li>
+            <span>Image 02</span>
+        </li>
+        <li>
+            <span>Image 03</span>
+        </li>
+        <li>
+            <span>Image 04</span>
+        </li>
+        <li>
+            <span>Image 05</span>
+        </li>
+        <li>
+            <span>Image 06</span>
+        </li>
+        
+    </ul>
+    <div class="content-container">
     <div class="flex-container">
         <div class="container-landing">
                 <h1>Restaurant Passport</h1>
@@ -25,5 +48,6 @@
             <a href="description-page.html">How It Works</a>
         </div>
     </nav class>
+</div>
 </body>
 </html>
