updated file structure

--- a/about-page.html
+++ b/about-page.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Us</title>
     <link rel="stylesheet" href="css/index.css"> 
-    <link rel="stylesheet" href="passport-font-files/stylesheet.css" type="text/css"/>
+    <link rel="stylesheet" href="stylesheet.css" type="text/css"/>
 </head>
 <body class='bg'>
     <nav class="about-nav">
