--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Restaurant Passport</title>
     <link rel="stylesheet" href="css/index.css"> 
-    <link rel="stylesheet" href="passport-font-files/stylesheet.css" type="text/css"  />
+    <link rel="stylesheet" href="stylesheet.css" type="text/css"  />
 </head>
 <body class="bg landing-page-body">
     
